maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurNord(getX(),getY()) && getIndication(getX(),getY()-1)){
                                                ^JediEscaper:27: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurNord(getX(),getY()-1) && getIndication(getX(),getY()+1)){
                                                  ^JediEscaper:29: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurOuest(getX()+1,getY()) && getIndication(getX()+1,getY())){
                                                   ^JediEscaper:31: error: type mismatch;
 found   : Int
 required: Boolean
    if(!aMurOuest(getX(),getY()) && getIndication(getX()+1,getY())){
                                                 ^JediEscaper:32: error: value Ouest is not a member of object plm.universe.Direction
      dir = Direction.Ouest; ind=getIndication(getX()+1,getY())}
                      ^